--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
+
+
+.flex{
+  display: flex;
+  
+}
+.flex-column{
+  flex-direction: column;
+}
+.justify-content-center{
+  justify-content: center;
+  
+}
+.align-items-center{
+  align-items: center;
+}
+.h-100{
+  height: 100vh;
+}
