--- a/src/app/login/page-login/page-login.component.html
+++ b/src/app/login/page-login/page-login.component.html
@@ -1,10 +1,16 @@
-<div class="h-100 flex justify-content-center align-items-center">
+<div class="h-100vh flex justify-content-center align-items-center">
   <div class="flex justify-content-center align-items-center loginBox">
     <form
       [formGroup]="form"
       (ngSubmit)="login()"
-      class="flex flex-column justify-content-center align-items-center"
+      class="flex w-100 flex-column justify-content-center align-items-center"
     >
+      <app-errors
+        *ngIf="formIncorrect"
+        class="w-100 flex justify-content-center align-items-center"
+        [errorMessage]="errosMessages.error"
+      ></app-errors>
+
       <div class="loginLabel flex flex-column">
         <label for="">UserName</label>
         <input type="text" formControlName="username" />
