--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 
+body{
+  font-size: 16px;
+}
 
 .flex{
   display: flex;
@@ -15,6 +18,12 @@
 .align-items-center{
   align-items: center;
 }
-.h-100{
+.h-100vh{
   height: 100vh;
+}
+.w-100{
+  width: 100%;
+}
+.w-60{
+  width: 60%;
 }
