create side bar

--- a/src/app/dash-board/components/sidebar/sidebar.component.html
+++ b/src/app/dash-board/components/sidebar/sidebar.component.html
@@ -1,1 +1,8 @@
-<p>sidebar works!</p>
+<nav class="sideBar flex">
+  <div class="sideBar-Ul">
+    <div class="sideBar-Ul-li"><span>Perfil</span></div>
+    <div class="sideBar-Ul-li"><span>Listar Figuras</span></div>
+    <div class="sideBar-Ul-li"><span></span></div>
+    <div class="sideBar-Ul-li"><span></span></div>
+  </div>
+</nav>
