--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
 
+
 body{
+box-sizing: border-box !important;
+padding: 0;
+margin: 0;
   font-size: 16px;
+
 }
 
 .flex{
