--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,10 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
 
 
+*{
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
 body{
-box-sizing: border-box !important;
-padding: 0;
-margin: 0;
+
   font-size: 16px;
 
 }
