added styles to profile components

--- a/src/app/profile/page-profile/page-profile.component.html
+++ b/src/app/profile/page-profile/page-profile.component.html
@@ -1,13 +1,36 @@
-<div
-  class="container flex justify-content-center align-items-center flex-column"
->
-  <div class="my-2 flex justify-content-center align-items-center">
-    <div class="mr-2">
-      <span>#</span>
-    </div>
-    <div>
-      <p>nombre</p>
-      <p>pepito</p>
-    </div>
+<div class="container flex justify-content-center align-items-center">
+  <div class="flex justify-content-center align-items-center flex-column">
+    <app-profile-item
+      class="my-2"
+      [title]="'Nombre'"
+      [valueTitle]="'SuperAdmin'"
+      >#</app-profile-item
+    >
+    <app-profile-item
+      class="my-2"
+      [title]="'Nombre'"
+      [valueTitle]="'SuperAdmin'"
+      >#</app-profile-item
+    >
+    <app-profile-item
+      class="my-2"
+      [title]="'Nombre'"
+      [valueTitle]="'SuperAdmin'"
+      >#</app-profile-item
+    >
+    <app-profile-item
+      class="my-2"
+      [title]="'Nombre'"
+      [valueTitle]="'SuperAdmin'"
+      >#</app-profile-item
+    >
+  </div>
+
+  <div class="flex justify-content-center align-items-center">
+    <img
+      width="50%"
+      src="https://cdn.pixabay.com/photo/2014/12/21/23/28/beach-ball-575425_960_720.png"
+      alt=""
+    />
   </div>
 </div>
