--- a/src/app/profile/page-profile/page-profile.component.scss
+++ b/src/app/profile/page-profile/page-profile.component.scss
@@ -1,14 +1,26 @@
+@import '../../../styles.scss';
+
 :host{
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
+  @include flexCenterHost();
+  
 }
+@mixin boxShadow() {
+  box-shadow: 2px 4px 45px -14px rgba(0,0,0,0.75);
+  border-radius: 10px;
+}
+
 .container{
   box-sizing: border-box;
-  background-color: bisque;
+  background-color: rgb(255, 255, 255);
   width: 80%;
   margin: auto;
   height: 35em;
   padding: 2em;
+  @include boxShadow();
 }
+
+
