--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 
+@mixin flexCenterHost() {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+}
 
 *{
   box-sizing: border-box;
