added all logic in figure components

--- a/src/app/dash-board/page-dashboard/page-dashboard.component.html
+++ b/src/app/dash-board/page-dashboard/page-dashboard.component.html
@@ -1,2 +1,4 @@
-<app-sidebar class=""></app-sidebar>
-<router-outlet></router-outlet>
+<app-sidebar class="sideBar_fixed"></app-sidebar>
+<div class="container_router">
+  <router-outlet></router-outlet>
+</div>
