--- a/src/app/profile/page-profile/page-profile.component.scss
+++ b/src/app/profile/page-profile/page-profile.component.scss
@@ -1,17 +1,12 @@
-@import '../../../styles.scss';
+@import '../../mixins';
 
 :host{
   width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  
   @include flexCenterHost();
   
 }
-@mixin boxShadow() {
-  box-shadow: 2px 4px 45px -14px rgba(0,0,0,0.75);
-  border-radius: 10px;
-}
+
 
 .container{
   box-sizing: border-box;
