--- a/src/app/dash-board/components/sidebar/sidebar.component.scss
+++ b/src/app/dash-board/components/sidebar/sidebar.component.scss
@@ -1,8 +1,9 @@
 .sideBar{
   background-color: gray;
-  height: 100vh;
-  width: 250px;
+  height: 100%;
+  width: 100%;
   margin: 0;
+ 
   
 }
 .sideBar-Ul{
