--- a/src/app/dash-board/page-dashboard/page-dashboard.component.scss
+++ b/src/app/dash-board/page-dashboard/page-dashboard.component.scss
@@ -7,3 +7,17 @@
   // align-items: center;
   // color:white
 }
+.sideBar_fixed{
+  height: 100vh;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  width: 12em;
+  
+}
+.container_router{
+  height: 100%;
+  width: 100%;
+  margin-left: 12em;
+}
