--- a/src/app/figure/page-figure/page-figure.component.html
+++ b/src/app/figure/page-figure/page-figure.component.html
@@ -1,1 +1,11 @@
-<p>page-figure works!</p>
+<div class="container">
+  <div>
+    <button [routerLink]="'/dashboard/figures/allFigures'">
+      Listar Figuras</button
+    ><button>Listar Modalidades</button>
+  </div>
+  <hr />
+  <div class="ContainerRoutes">
+    <router-outlet></router-outlet>
+  </div>
+</div>
