add all component and reducer for figuresGroup

--- a/src/app/figure/components/figures/figures.component.html
+++ b/src/app/figure/components/figures/figures.component.html
@@ -1,5 +1,1 @@
-<div class="container_grid">
-  <ng-container *ngFor="let figure of tmpFigures">
-    <app-figure-card [figure]="figure"></app-figure-card>
-  </ng-container>
-</div>
+<app-figures-list-view></app-figures-list-view>
