--- a/src/app/figure/page-figure/page-figure.component.scss
+++ b/src/app/figure/page-figure/page-figure.component.scss
@@ -14,7 +14,7 @@
   
 }
 .ContainerRoutes{
-  margin-top: 8em;
+  margin-top: 3em;
   padding: 2em;
   height: 100%;
   width: 100%;
@@ -26,7 +26,10 @@ button{
   border: 0px;
   background-color: white;
   z-index: 9;
+  cursor: pointer;
 }
-button:hover{
+
+.button_active{
   border-bottom: 1px solid blueviolet;
+
 }
