added basic service and component by create new figure

--- a/src/app/figure/page-figure/page-figure.component.html
+++ b/src/app/figure/page-figure/page-figure.component.html
@@ -11,6 +11,12 @@
     >
       Listar Modalidades
     </button>
+    <button
+      [routerLink]="'/dashboard/figures/generete'"
+      routerLinkActive="button_active"
+    >
+      Crear Figura
+    </button>
   </div>
   <hr />
   <div class="ContainerRoutes">
