--- a/src/app/figure/components/generete-figure/generete-figure.component.html
+++ b/src/app/figure/components/generete-figure/generete-figure.component.html
@@ -1,4 +1,8 @@
-<div></div>
+<div>
+  <app-select-figure-group
+    (idGroup)="idGroupFigure = $event"
+  ></app-select-figure-group>
+</div>
 
 <div>A;adir nueva figura</div>
 <form action="">
