change temporal data by data from server

--- a/src/app/figure/components/figure-card/figure-card.component.html
+++ b/src/app/figure/components/figure-card/figure-card.component.html
@@ -1,6 +1,6 @@
 <div class="cardFigure">
   <div class="cardHeader">
-    <h1 class="cardFigure_title">{{ figure.figurename }}</h1>
+    <h1 class="cardFigure_title">{{ figure.name }}</h1>
     <span>X</span>
   </div>
   <div class="cardFigure_grid">
