--- a/src/app/figure/components/figures-list-view/figures-list-view.component.html
+++ b/src/app/figure/components/figures-list-view/figures-list-view.component.html
@@ -1,5 +1,5 @@
 <div class="container_grid">
-  <ng-container *ngFor="let figure of tmpFigures">
+  <ng-container *ngFor="let figure of figures">
     <app-figure-card [figure]="figure"></app-figure-card>
   </ng-container>
 </div>
