--- a/src/app/figure/components/select-figure-group/select-figure-group.component.html
+++ b/src/app/figure/components/select-figure-group/select-figure-group.component.html
@@ -1,7 +1,7 @@
 <div class="my-2">
   <form [formGroup]="form">
     <select formControlName="formGroupID">
-      <ng-container *ngFor="let figureGroup of tmpFiguresGroup">
+      <ng-container *ngFor="let figureGroup of figuresGroup">
         <option [value]="figureGroup.id">{{ figureGroup.name }}</option>
       </ng-container>
     </select>
