--- a/src/app/profile/page-profile/page-profile.component.scss
+++ b/src/app/profile/page-profile/page-profile.component.scss
@@ -12,7 +12,7 @@
   box-sizing: border-box;
   background-color: rgb(255, 255, 255);
   width: 80%;
-  margin: auto;
+  margin-top: 10em;
   height: 35em;
   padding: 2em;
   @include boxShadow();
