--- a/src/styles.scss
+++ b/src/styles.scss
@@ -24,8 +24,15 @@ body{
   justify-content: center;
   
 }
+.justify-content-start{
+  justify-content: start;
+  
+}
 .align-items-center{
   align-items: center;
+}
+.align-items-start{
+  align-items: start;
 }
 .h-100vh{
   height: 100vh;
