fix mapping response api crete and add function remove figure

--- a/src/app/dash-board/components/sidebar/sidebar.component.html
+++ b/src/app/dash-board/components/sidebar/sidebar.component.html
@@ -1,7 +1,9 @@
 <nav class="sideBar flex">
   <div class="sideBar-Ul">
     <div class="sideBar-Ul-li"><span>Perfil</span></div>
-    <div class="sideBar-Ul-li"><span>Listar Figuras</span></div>
+    <div class="sideBar-Ul-li" routerLink="/dashboard/figures">
+      <span>Listar Figuras</span>
+    </div>
     <div class="sideBar-Ul-li"><span></span></div>
     <div class="sideBar-Ul-li"><span></span></div>
   </div>
