added best styles component login

--- a/src/app/_mixins.scss
+++ b/src/app/_mixins.scss
@@ -9,3 +9,8 @@
   box-shadow: 2px 4px 45px -14px rgba(0,0,0,0.75);
   border-radius: 10px;
 }
+
+@mixin bgImageUrl($url) {
+  background-image: $url;
+  
+}
