added best styles profile component

--- a/src/app/profile/components/profile-item/profile-item.component.html
+++ b/src/app/profile/components/profile-item/profile-item.component.html
@@ -2,6 +2,6 @@
   <ng-content></ng-content>
 </div>
 <div>
-  <p>{{ title }}</p>
-  <p>{{ valueTitle }}</p>
+  <p class="">{{ title }}</p>
+  <p class="cardUser_name">{{ valueTitle | titlecase }}</p>
 </div>
