--- a/src/styles.scss
+++ b/src/styles.scss
@@ -28,6 +28,10 @@ body{
   justify-content: start;
   
 }
+.justify-content-end{
+  justify-content: flex-end;
+  
+}
 .align-items-center{
   align-items: center;
 }
