--- a/src/app/figure/components/figures-list-view/figures-list-view.component.scss
+++ b/src/app/figure/components/figures-list-view/figures-list-view.component.scss
@@ -1,6 +1,9 @@
 .container_grid{
+  width: 80%;
+  margin-top: 1em;
   display: grid;
-  grid-template-columns: auto auto auto;
-  column-gap: 2em;
-  row-gap: 2em;
+  grid-template-columns: repeat(3,1fr);
+  
+  column-gap: 1.5em;
+  row-gap: 1.5em;
 }
