--- a/src/app/figure/components/select-figure-group/select-figure-group.component.html
+++ b/src/app/figure/components/select-figure-group/select-figure-group.component.html
@@ -1,5 +1,6 @@
 <div class="my-2">
   <form [formGroup]="form">
+    <span>Elegir modalidad</span>
     <select formControlName="formGroupID">
       <ng-container *ngFor="let figureGroup of figuresGroup">
         <option [value]="figureGroup.id">{{ figureGroup.name }}</option>
